force-app/main/default/objects/SSP_NonCustodialParent__c/SSP_NonCustodialParent__c.object-meta.xml
<CustomObject>
    <description>Stores information about non custodial parent applicable for an application or case</description>
    <label>SSP NonCustodialParent</label>
    <nameField>
        
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        
        <label>SSP_NonCustodialParent Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>SSP NonCustodialParent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>