force-app/main/default/objects/SSP_NonCustodialParent__c/fields/AbsentParentVerificationCode__c.field-meta.xml
<CustomField>
    <fullName>AbsentParentVerificationCode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field is used to verify absent parent information</description>
    <label>Absent Parent Verification</label>
    <type>Checkbox</type>
</CustomField>