force-app/main/default/objects/SSP_NonCustodialParent__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to identify the related application of a Non Custodial Parent</description>
    <label>Application</label>
    <referenceTo>SSP_Application__c</referenceTo>
    <relationshipName>SSP_NonCustodialParent</relationshipName>
    <type>Lookup</type>
</CustomField>