force-app/main/default/objects/SSP_NonCustodialParent__c/fields/DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirth__c</fullName>
    <description>Absent Parent Birth Date</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>