force-app/main/default/objects/SSP_NonCustodialParent__c/fields/DCAddressId__c.field-meta.xml
<CustomField>
    <fullName>DCAddressId__c</fullName>
    <description>This field is used to identify the unique address of a Non custodial parent for an External system</description>
    <externalId>true</externalId>
    <label>DCAddressId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>