force-app/main/default/objects/SSP_NonCustodialParent__c/fields/DCNonCustodialParentId__c.field-meta.xml
<CustomField>
    <fullName>DCNonCustodialParentId__c</fullName>
    <description>This field is used to identify the unique Non custodial parent for an External system</description>
    <externalId>true</externalId>
    <label>DCNonCustodialParentId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>