force-app/main/default/objects/SSP_NonCustodialParent__c/fields/DCNonCustodialRelationshipId__c.field-meta.xml
<CustomField>
    <fullName>DCNonCustodialRelationshipId__c</fullName>
    <description>This field is used to identify the unique Non custodial parent relationship for an External system</description>
    <externalId>true</externalId>
    <label>DCNonCustodialRelationshipId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>