force-app/main/default/objects/SSP_NonCustodialParent__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>Absent Parent First Name</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>