force-app/main/default/objects/SSP_NonCustodialParent__c/fields/IsParentUnknown__c.field-meta.xml
<CustomField>
    <fullName>IsParentUnknown__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether the parent is unknown or not</description>
    <label>Is Parent Unknown ?</label>
    <type>Checkbox</type>
</CustomField>