force-app/main/default/objects/SSP_NonCustodialParent__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Absent Parent Last Name</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>