force-app/main/default/objects/SSP_NonCustodialParent__c/fields/MiddleInitial__c.field-meta.xml
<CustomField>
    <fullName>MiddleInitial__c</fullName>
    <description>Absent Parent Middle Initial</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Middle Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>