force-app/main/default/objects/SSP_NonCustodialParent__c/fields/SuffixCode__c.field-meta.xml
<CustomField>
    <fullName>SuffixCode__c</fullName>
    <description>Absent Parent Suffix code</description>
    <label>Suffix</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>Suffix</valueSetName>
        
        </valueSet>
</CustomField>