force-app/main/default/objects/SSP_NonCustodialParent__c/recordTypes/Absent_Parent.recordType-meta.xml
<RecordType>
    <fullName>Absent_Parent</fullName>
    <active>true</active>
    <label>Absent Parent</label>
</RecordType>