force-app/main/default/objects/SSP_NonCustodialParent__c/recordTypes/ChildMedicalSupport.recordType-meta.xml
<RecordType>
    <fullName>ChildMedicalSupport</fullName>
    <active>true</active>
    <label>Child/Medical Support</label>
</RecordType>